--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 .container {
   width: 1200px;
   margin: 0 auto;
-  padding-top: 80px;
+  padding: 80px 0;
 }
 
 .line1 {
@@ -38,7 +38,57 @@ float: left;
  
 }
 .line3 {
-background: #11cf0d;
+  background: #f60fdf;
+  
+ 
+}
+.line3_1_box {
+  width: 400px;
+  height: 400px;
+  display: inline-block;
+  float: left;
+  border: 4px solid rgb(36, 225, 36);
+}
+.line3_2_box {
+  width: 800px;
+  height: 200px;
+  border: 4px solid rgb(36, 225, 36);
+  float: right;
+  background: #000;
+  display: inline-block;
+  
+}
+.line3_3_box {
+  width: 400px;
+  height: 200px;
+  border: 4px solid rgb(36, 225, 36);
+  background: #46044b;
+  display: inline-block;
+  
+}
+.line3_4_box {
+  width: 400px;
+  height: 200px;
+  border: 4px solid rgb(36, 225, 36);
+  background: #e1f40b;
+  display: inline-block;
+  float: right;
+}
+.line3_5_box {
+  width: 400px;
+  height: 100px;
+  border: 4px solid rgb(36, 225, 36);
+  background: #f5f909;
+  display: inline-block;
+  float: right;
+}
+.line3_6_box {
+  width: 400px;
+  height: 100px;
+  border: 4px solid rgb(36, 225, 36);
+  background: #181be4;
+  display: inline-block;
+  float: right;
 }
 
 .clearfix:after {
@@ -46,124 +96,3 @@ content: "";
 display: block;
 clear: both;
 }
-/* 
-.header {
-  color: rgb(255, 252, 252);
-  background: #111111;
-  padding: 20px 0;
-}
-.header_container {
-  margin: 0 auto;
-  width: 1200px;
-  font-size: 0;
-}
-.logo a {
-  width: 100px;
-  padding: 4px 8px;
-  text-transform: uppercase;
-  color: aliceblue;
-  text-decoration: none;
-}
-.menu,.logo {
-  font-size: 18px;
-  display: inline-block;
-  margin: 0 auto;
-}
-.menu {
-  font-size: 0;
-  width: 1000px;
-  text-align: center;
-  color: rgb(197, 203, 208);
-}
-.menu li {
-  display: inline-block;
-  font-size: 16px;
-}
-.menu li a.active {
-  color: darkred;
-}
-.menu a {
-  color: rgb(154, 207, 9);
-}
-li + li {
-  margin-left: 20px;
-}
-.image_logo {
-  width: 60px;
-  border-radius: 3px;
-  border: 4px solid rgb(231, 43, 14);
-  margin-left: 16px;
-}
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-  background: rgb(242, 235, 235);
-}
-.footer {
-  text-align: center;
-  color: rgb(163, 91, 9);
-  background: #111111;
-}
-h1 {
-  font-size: 30px;
-  font-weight: 700;
-  padding-top: 18px;
-  margin-bottom: 6px;
-}
-
-p {
-  color: rgb(54, 6, 67);
-}
-p + p {
-  margin-top: 3px;
-}
-.cards {
-  font-size: 0;
-}
-.card_box {
-  padding: 20px;
-  width: 400px;
-  display: inline-block;
-  font-size: 18px;
-}
-.card {
-  padding: 14px;
-  border: 3px solid #000;
-  border-radius: 4px;
-}
-.title {
-  font-weight: 600;
-  font-size: 24px;
-  color: rgb(5, 92, 63);
-}
-.price {
-  margin: 10px auto;
-  font-weight: 800;
-  color: rgb(27, 44, 2);
-  text-align: start;
-}
-.about {
-  text-align: justify;
-  color: rgb(97, 97, 238);
-  font-size: 20px;
-  height: 80px;
-  overflow: hidden;
-  margin-top: 12px;
-}
-.image {
-  border: 2px solid #000;
-  border-radius: 10px;
-  margin-bottom: 18px;
-  box-shadow: 2px 2px 10px 4px #000;
-  display: block;
-  height: 200px;
-}
-.image img {
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
-}
-.footer_container {
-  padding: 12px 0;
-} */
